--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -221,6 +221,7 @@ label,p,h1,h2,h3,h4,h5{
 }
 .loading p:after{
     content:url("../images/loading_tea.png");
+    /*content:url("asset/loading_tea.png");*/
     opacity:0.6;
     position:relative;
     top:3px;
