--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -220,8 +220,8 @@ label,p,h1,h2,h3,h4,h5{
     color:rgba(0,0,0,0.5)
 }
 .loading p:after{
-    content:url("../images/loading_tea.png");
-    /*content:url("asset/loading_tea.png");*/
+    /*content:url("../images/loading_tea.png");*/
+    content:url("/assets/loading_tea.png");
     opacity:0.6;
     position:relative;
     top:3px;
