--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -49,9 +49,9 @@
                            <li>
                                <i class="icon-user" title="<%= current_user.first_name%>"></i>
                            </li>
-                           <li class='empty'>
+                           <li class='empty'><a>
                                <span>&nbsp;</span>
-                           </li>
+                           </a></li>
                            <li>
                              <a href="/user_sessions/destroy"><%= t 'auth.view.signout_btn'%></a>
                            </li>
